gccida/g0/reg_overlap_mentioned_for_reload_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6708:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( xa->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6710:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)xa + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6754:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/reload.c:6755:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)xa + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_overlap_mentioned_for_reload_p/src/obj/reload.o] Error 1
